# MangaMeCLI

./: CMakeLists.txt  MS-Wrapper.hpp  a.out  endpoints  makefile  mangaMe  mangaMe.cpp
includes/: MS-Wrapper.hpp
src/: gui.cpp  mangaMe.cpp  test.cpp
